update ragit-server
