# crates/server/src/models/repo.rs
@@ -59,7 +59,7 @@ pub async fn get_id_by_name(user_name: &str, repo_name: &str, pool: &PgPool) -> 
     let user_name = normalize(user_name);
     let repo_name = normalize(repo_name);
 
-    let row = sqlx::query!(
+    let row = crate::query!(
         "SELECT repository.id FROM repository JOIN user_ ON user_.normalized_name = $1 WHERE owner_id = user_.id AND repository.normalized_name = $2",
         user_name,
         repo_name,
@@ -69,7 +69,7 @@ pub async fn get_id_by_name(user_name: &str, repo_name: &str, pool: &PgPool) -> 
 }
 
 pub async fn get_list(user_id: i32, limit: i64, offset: i64, pool: &PgPool) -> Result<Vec<RepoSimple>, Error> {
-    let rows = sqlx::query!(
+    let rows = crate::query!(
         "
         SELECT
             repository.id,
@@ -109,8 +109,46 @@ pub async fn get_list(user_id: i32, limit: i64, offset: i64, pool: &PgPool) -> R
     Ok(result)
 }
 
+pub async fn get_detail(repo_id: i32, pool: &PgPool) -> Result<RepoDetail, Error> {
+    let row = crate::query!(
+        "SELECT
+            repository.id,
+            repository.name as name,
+            repository.normalized_name as normalized_name,
+            user_.name as owner_name,
+            user_.normalized_name as owner_normalized_name,
+            description,
+            website,
+            stars,
+            repository.readme,
+            repo_size,
+            repository.created_at,
+            pushed_at,
+            updated_at
+        FROM repository JOIN user_ ON repository.owner_id = user_.id
+        WHERE repository.id = $1",
+        repo_id,
+    ).fetch_one(pool).await?;
+
+    Ok(RepoDetail {
+        id: row.id,
+        name: row.name,
+        normalized_name: row.normalized_name,
+        owner_name: row.owner_name,
+        owner_normalized_name: row.owner_normalized_name,
+        description: row.description,
+        website: row.website,
+        stars: row.stars,
+        readme: row.readme,
+        repo_size: row.repo_size,
+        created_at: row.created_at,
+        pushed_at: row.pushed_at,
+        updated_at: row.updated_at,
+    })
+}
+
 pub async fn create_and_return_id(user_id: i32, repo: &RepoCreate, pool: &PgPool) -> Result<i32, Error> {
-    let repo_id = sqlx::query!(
+    let repo_id = crate::query!(
         "INSERT
         INTO repository (
             owner_id,
@@ -168,10 +206,38 @@ pub async fn create_and_return_id(user_id: i32, repo: &RepoCreate, pool: &PgPool
 
 pub async fn get_session_id(user: &str, repo: &str, pool: &PgPool) -> Result<Option<String>, Error> {
     let repo_id = get_id_by_name(user, repo, pool).await?;
-    let session_id = sqlx::query!(
+    let session_id = crate::query!(
         "SELECT push_session_id FROM repository WHERE id = $1",
         repo_id,
     ).fetch_one(pool).await?.push_session_id;
 
     Ok(session_id)
+}
+
+#[derive(Clone, Copy, Debug, Deserialize, Serialize)]
+pub struct Traffic {
+    pub push: u64,
+    pub clone: u64,
+}
+
+pub async fn get_traffic_by_key(repo_id: i32, key: &str, pool: &PgPool) -> Result<Traffic, Error> {
+    let maybe_row = crate::query!(
+        "SELECT push, clone FROM repository_stat WHERE repo_id = $1 AND date_str = $2",
+        repo_id,
+        key,
+    ).fetch_all(pool).await?;
+
+    match maybe_row.get(0) {
+        Some(row) => Ok(Traffic { push: row.push as u64, clone: row.clone as u64 }),
+        None => Ok(Traffic { push: 0, clone: 0 }),
+    }
+}
+
+pub async fn get_traffic_all(repo_id: i32, pool: &PgPool) -> Result<Traffic, Error> {
+    let row = crate::query!(
+        "SELECT SUM(push) AS push, SUM(clone) AS clone FROM repository_stat WHERE repo_id = $1",
+        repo_id,
+    ).fetch_one(pool).await?;
+
+    Ok(Traffic { push: row.push.unwrap_or(0) as u64, clone: row.clone.unwrap_or(0) as u64 })
 }
